# GAME-rs

./: Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: audio.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: decode.rs  error.rs  gguf.rs  gguf_loader.rs  lib.rs  mel.rs  notify.rs  profiler.rs  rng.rs  types.rs
crates/core/src/model/: blocks.rs  estimator.rs  mod.rs  ops.rs  segmenter.rs  tests.rs  weights.rs
crates/core/src/tensor/: tests.rs
crates/core/src/tensor/cpu/: attention.rs  base.rs  conv.rs  elementwise.rs  indexing.rs  layout.rs  matmul.rs  mod.rs  norm.rs  rope.rs  util.rs
crates/core/src/tensor/gpu/: base.rs  conv.rs  elementwise.rs  matmul.rs  norm.rs  params.rs  pipelines.rs  rope.rs
crates/core/src/tensor/shaders/: arithmetic.wgsl  layout_ops.wgsl  linear.wgsl  matmul.wgsl  rms_norm.wgsl  rope.wgsl  softmax.wgsl
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs  notifier.rs  state.rs
crates/gui/src/pages/: config.rs  mod.rs  progress.rs  results.rs
crates/output/: Cargo.toml
crates/output/src/: lib.rs  midi_writer.rs  output.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
gui/: Cargo.toml
gui/src/pages/: config.rs  mod.rs  results.rs
src/: config.rs  d3pm.rs  gguf_loader.rs  gui.rs  lib.rs  main.rs  mel.rs  midi_writer.rs  output.rs  profiler.rs  rng.rs
src/model/: blocks.rs  encoder.rs  estimator.rs  mod.rs  ops.rs  segmenter.rs  tests.rs
src/tensor/: cpu.rs  gpu.rs  mod.rs  tests.rs
src/tensor/cpu/: attention.rs  conv.rs  elementwise.rs  matmul.rs  norm.rs  rope.rs  util.rs
src/tensor/gpu/: elementwise.rs  indexing.rs  layout.rs  matmul.rs  mod.rs  pipelines.rs  util.rs
src/tensor/shaders/: arithmetic.wgsl  contiguous.wgsl  linear.wgsl  softmax.wgsl
