[workspace]
members = ["crates/core", "crates/audio", "crates/output", "crates/service"]
exclude = ["crates/gui"]
resolver = "2"

# Shared metadata inherited by every crate via `<field>.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jobsecond"]
description = "Rust port of the GAME (Generative Adaptive MIDI Extractor) inference engine"
rust-version = "1.85"

[package]
name = "game-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = []
gpu = ["game-core/gpu", "game-service/gpu", "game-gui?/gpu"]
gui = ["dep:game-gui"]
cpu-attention-gemm-gemm = ["game-core/cpu-attention-gemm-gemm", "game-service/cpu-attention-gemm-gemm"]
cpu-attention-gemm-matrixmultiply = ["game-core/cpu-attention-gemm-matrixmultiply", "game-service/cpu-attention-gemm-matrixmultiply"]

[dependencies]
clap = { version = "4", features = ["derive"] }
game-core = { path = "crates/core", default-features = false }
game-service = { path = "crates/service", default-features = false }
game-gui = { path = "crates/gui", optional = true }
console = "0.16"
env_logger = "0.11"
indicatif = "0.18"
log = "0.4"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "game-gui"
path = "src/gui.rs"
required-features = ["gui"]
