[workspace]
members = [
    "cli",
    "crates/core",
    "crates/audio",
    "crates/output",
    "crates/service",
]
exclude = ["gui"]
resolver = "2"

# Shared metadata inherited by every crate via `<field>.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jobsecond"]
description = "Rust port of the GAME (Generative Adaptive MIDI Extractor) inference engine"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
