[package]
name = "game-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WAV decode, resample, mono mixdown, and silence-based slicing for game"

[dependencies]
game-core = { path = "../core" }
hound = "3"
