[package]
name = "game-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
cpu-attention-gemm-gemm = []
cpu-attention-gemm-matrixmultiply = []

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
candle-core = "0.10.2"
candle-nn = "0.10.2"
gemm = { version = "0.19", features = ["wasm-simd128-enable"] }
log = "0.4"
matrixmultiply = "0.3"
num_cpus = "1"
pollster = { version = "0.4", optional = true }
rand = "0.8"
rand_mt = "4"
rayon = "1"
realfft = "3"
serde_json = "1"
wgpu = { version = "24", optional = true }
