[package]
name = "game-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core GGUF loading, model forward passes, and tensor backends (CPU/GPU) for game-crabml"

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]
cpu-attention-gemm-gemm = []
cpu-attention-gemm-matrixmultiply = []

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
gemm = { version = "0.19", features = ["wasm-simd128-enable"] }
log = "0.4"
matrixmultiply = "0.3"
num_cpus = "1"
pollster = { version = "0.4", optional = true }
getrandom = "0.4"
rand_mt = { version = "6", default-features = false }
rayon = "1"
realfft = "3"
serde_json = "1"
wgpu = { version = "24", optional = true }
