[package]
name = "game-output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "MIDI (via midly), TXT, and CSV output encoding for game-crabml"

[dependencies]
game-core = { path = "../core" }
midly = "0.5"
