[package]
name = "game-service"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = ["game-core/gpu"]
mkl = ["game-core/mkl"]
cpu-attention-gemm-gemm = ["game-core/cpu-attention-gemm-gemm"]
cpu-attention-gemm-matrixmultiply = ["game-core/cpu-attention-gemm-matrixmultiply"]

[dependencies]
game-audio = { path = "../audio" }
game-core = { path = "../core", default-features = false }
game-output = { path = "../output" }
rand = "0.8"
rayon = "1"
