[package]
name = "game-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Orchestration layer (audio prep, chunk parallelism, inference, output) for game-crabml"

[features]
default = []
gpu = ["game-core/gpu"]
cpu-attention-gemm-gemm = ["game-core/cpu-attention-gemm-gemm"]
cpu-attention-gemm-matrixmultiply = ["game-core/cpu-attention-gemm-matrixmultiply"]

[dependencies]
game-audio = { path = "../audio" }
game-core = { path = "../core", default-features = false }
game-output = { path = "../output" }
rayon = "1"
